Fixed the navbar vertical padding + overflow of body

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,7 @@ body {
     min-width: 400px;
     min-height: 150vh;
     animation: bio 2s ease-in-out;
+    overflow-x: hidden;
 }
 
 html {
